# proxsync

./: .gitignore  AGENTS.md  Dockerfile  EXTENSION_PLAN.md  MANIFEST.in  NETWORK_SYNC_CHANGES.md  README.md  RELEASING.md  config.py  docker-compose.yml  env.sh.example  pbs214_sync.py  pbs215_sync.py  pbs_env.sh.example  pbs_sync.py  pve_netbox_sync.sh  pve_sync.py  pyproject.toml  requirements.txt  state_db.py  sync.py  sync_enhanced.py  test_network_sync.py
docker/configuration/: plugins.py
docs/: browser-automation-comparison.md
pve_sync_plugin/: __init__.py  apps.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  plugin.py  signals.py  tables.py  tasks.py  template_content.py  urls.py  utils.py  view_helpers.py  views.py
pve_sync_plugin/api/: __init__.py  serializers.py  urls.py  views.py
pve_sync_plugin/management/: __init__.py
pve_sync_plugin/management/commands/: __init__.py  pve_sync.py  run_scheduled_syncs.py
pve_sync_plugin/migrations/: 0001_initial.py  0002_pvepluginsettings.py  0003_netboxmodel_timestamps.py  0004_model_verbose_names.py  0005_align_netboxmodel_timestamps.py  0006_pbsserverconfig_and_more.py  0007_rename_verbose_names_to_proxmox_sync.py  0008_pbsserverconfig_sync_schedule.py  0009_add_every_3h_schedule.py  0010_pvedriftevent.py  0011_pveclusterconfig_notify_on_sync.py  0012_pvedriftevent_tags_and_index_renames.py  0013_pluginsettings_log_retention.py  0014_vmprovisioninglog.py  0015_pvevmtasklog.py  0016_pvevmtasklog_status_textfield.py
pve_sync_plugin/sync/: __init__.py  config_bridge.py  engine.py
pve_sync_plugin/templates/pve_sync/: cluster_form.html  cluster_list.html  dashboard.html  pbsserverconfig.html  pvebackupstatus.html  pveclusterconfig.html  pvedriftevent.html  pvesyncjob.html  pvevmtasklog_list.html  pvewebhookevent.html  settings.html  vm_planner.html  vm_provisioning_combined.html  vm_provisioning_log.html
pve_sync_plugin/templates/pve_sync/inc/: vm_sync_button.html  vm_task_log_panel.html
pve_sync_plugin/templatetags/: __init__.py  pve_sync_tags.py
skills/dev-browser/: demo-script.ts
tests/: test_plugin_contracts.py
